refac(doc): #3423.6 fix-meta-descriptions-keywords
- Descriptions were shortened, and keywords were added on some pages.


Former-commit-id: 4a99592776f2e95828b908be4ea9bca6fd2ce7ad

--- a/content/pages/rules/architecture/050/index.adoc
+++ b/content/pages/rules/architecture/050/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/050/
 :category: architecture
-:description: This document contains the details of the security requirements related to the definition and management of software architecture in the organization. This requirement establishes the importance of controlling the calls to interpreted code in order to avoid malicious code injections.
-:keywords: Code, System, Interpreted, JavaScript, ASVS, CWE
+:description: This requirement establishes the importance of controlling the calls to interpreted code in order to avoid malicious code injections.
+:keywords: Code, System, Security, Requirement, Interpreted, JavaScript, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R050. Control calls to interpreted code
