--- a/content/pages/rules/out-of-scope/architecture/049/index.adoc
+++ b/content/pages/rules/out-of-scope/architecture/049/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/049/
 :category: architecture
-:description: This document contains the details of the security requirements related to the definition and management of system architecture and components in the organization. This requirement establishes the importance of using interfaces instead of implementations in the source code.
-:keywords: Requirement, Security, Architecture, Components, Interfaces, Implementation
+:description: This requirement establishes the importance of using interfaces instead of implementations in the source code.
+:keywords: Requirement, Security, Architecture, Components, Interfaces, Implementation, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
