--- a/content/pages/rules/out-of-scope/architecture/060/index.adoc
+++ b/content/pages/rules/out-of-scope/architecture/060/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/060/
 :category: architecture
-:description: This document details the security guidelines and requirements related to the management of the attack surface components of a system. In this case, it is recommended that the the attack surface components be identified by the company performing the analysis.
-:keywords: Monitor, System, Requirement, Event, Organization, Security
+:description: This requirement establishes that the attack surface components must be identified by the company performing the analysis.
+:keywords: Monitor, System, Requirement, Event, Organization, Security, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
