--- a/content/pages/rules/out-of-scope/architecture/063/index.adoc
+++ b/content/pages/rules/out-of-scope/architecture/063/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/063/
 :category: architecture
-:description: This document contains the details of the security requirements related to the definition and management of logical architecture in the organization. This requirement establishes the importance of verifying the security requirements defined for a system through white box tests.
-:keywords: Security, Requirements, White Box, Testing, Verify, System
+:description: This requirement establishes the importance of verifying the security requirements defined for a system through white box tests.
+:keywords: Security, Requirements, White Box, Testing, Verify, System, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
