--- a/content/pages/rules/out-of-scope/architecture/066/index.adoc
+++ b/content/pages/rules/out-of-scope/architecture/066/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/066/
 :category: architecture
-:description: This document contains the details of the security requirements related to the definition and management of system components in the organization. This requirement establishes the importance of defining the components to be tested during an ethical hacking exercise.
-:keywords: Component, System, Testing, White Box, Configuration, Security.
+:description: This requirement establishes the importance of defining the components to be tested during an ethical hacking exercise.
+:keywords: Component, System, Testing, White Box, Configuration, Security, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
