--- a/content/pages/rules/out-of-scope/architecture/070/index.adoc
+++ b/content/pages/rules/out-of-scope/architecture/070/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/070/
 :category: architecture
-:description: This document contains the details of the security requirements related to the definition and management of logical architecture in the organization. This requirement establishes the importance of defining a set of automated security testing as part of the deployment process.
-:keywords: Requirement, Security, Architecture, Automated, Testing, GDPR.
+:description: This requirement establishes the importance of defining some automated security testing as part of the deployment process.
+:keywords: Requirement, Security, Architecture, Automated, Testing, GDPR, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
@@ -11,7 +11,7 @@
 
 There must be a set of automated security tests
 that run as part of the deployment process
-(eg: unit, integration, functional).
+(e.g., unit, integration, functional).
 
 == Description
 
