--- a/content/pages/rules/out-of-scope/authorization/109/index.adoc
+++ b/content/pages/rules/out-of-scope/authorization/109/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/109/
 :category: authorization
-:description: This document contains the details of the security requirements related to the definition and management of access control in the organization. This requirement establishes the importance of monitoring restricted areas in order to protect the information assets there stored.
-:keywords: Requirement, Security, Access Control, Monitor, Restricted Area, Physical Access
+:description: This requirement establishes the importance of monitoring restricted areas to protect the information assets stored there.
+:keywords: Requirement, Security, Access Control, Monitor, Restricted Area, Physical Access, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
