--- a/content/pages/rules/out-of-scope/authorization/111/index.adoc
+++ b/content/pages/rules/out-of-scope/authorization/111/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/111/
 :category: authorization
-:description: This document contains the details of the security requirements related to the definition and management of access control in the organization. This requirement establishes the importance of defining detective and deterrent physical controls in the periphery of the facilities.
-:keywords: Requirement, Security, Physical Access, Control, Mechanisms, Facilities
+:description: This requirement establishes the importance of defining detective and deterrent physical controls in the periphery of the facilities.
+:keywords: Requirement, Security, Physical Access, Control, Mechanisms, Facilities, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
