--- a/content/pages/rules/certificates/090/index.adoc
+++ b/content/pages/rules/certificates/090/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/090/
 :category: certificates
-:description: This document contains the details of the security requirements related to the definition, management and usage of digital certificates. This requirement establishes the importance of using valid certificates in the applications to avoid security and legal issues.
-:keywords: Security, Requirement, Digital, Certificates, Validation, Expired.
+:description: This requirement establishes the importance of using valid certificates in the applications to avoid security and legal issues.
+:keywords: Security, Requirement, Digital, Certificates, Validation, Expired, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R090. Use valid certificates
