--- a/content/pages/rules/out-of-scope/authorization/099/index.adoc
+++ b/content/pages/rules/out-of-scope/authorization/099/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/099/
 :category: authorization
-:description: This document contains the details of the security requirements related to the definition and management of access control in the organization. This requirement establishes the importance of establish physical controls for vehicles and people in parking zones of the facilities.
-:keywords: Requirement, Security, Access Control, Parking, Vehicles, Physical Access
+:description: This requirement establishes the importance of setting physical controls for vehicles and people in the facilities' parking zones.
+:keywords: Requirement, Security, Access Control, Parking, Vehicles, Physical Access, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
