--- a/content/pages/rules/out-of-scope/authorization/103/index.adoc
+++ b/content/pages/rules/out-of-scope/authorization/103/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/103/
 :category: authorization
-:description: This document contains the details of the security requirements related to the definition and management of access control in the organization. This requirement establishes the importance of defining processes to manage access cards for authorized workforce members.
-:keywords: Requirement, Security, Physical Access, Cards, Policies, Process
+:description: This requirement establishes the importance of defining processes to manage access cards for authorized workforce members.
+:keywords: Requirement, Security, Physical Access, Cards, Policies, Process, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
@@ -10,8 +10,8 @@
 == Requirement
 
 The organization must define a process
-for assignation, stocktaking, replacement, re assignation and retirement
-of access cards
+for assignation, stocktaking, replacement, re-assignation and retirement
+of access cards.
 
 == References
 
