--- a/content/pages/rules/cryptography/223/index.adoc
+++ b/content/pages/rules/cryptography/223/index.adoc
@@ -1,6 +1,6 @@
 :slug: rules/223/
 :category: cryptography
-:description: This document contains the details of the security requirements related to definition and management of random numbers in the application and system. This requirement establishes the importance of generating random numbers using a uniform distribution.
+:description: This requirement establishes the importance of generating random numbers using a uniform distribution.
 :keywords: Random, Numbers, Distribution, CWE, NIST, ASVS
 :rules: yes
 
@@ -51,13 +51,22 @@ but the PRNG's algorithm is not cryptographically strong.
 The product uses a scheme that generates numbers or identifiers that are more
 predictable than required.
 
-. [[r7]] link:https://www.owasp.org/index.php/ASVS_V7_Cryptography[OWASP-ASVS v3.1-7.6]
-Verify that all random numbers, random file names, random GUIDs,
-and random strings are generated using the cryptographic module’s
-approved random number generator
-when these random values are intended to be not guessable by an attacker.
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V6.3 Random Values.(6.3.1)]
+Verify that all random numbers, random file names, random **GUID**s, and random
+strings are generated using the cryptographic module's approved
+cryptographically secure random number generator when these random values are
+intended to be not guessable by an attacker.
 
-. [[r8]] link:https://www.owasp.org/index.php/ASVS_V7_Cryptography[OWASP-ASVS v3.1-7.15]
-Verify that random numbers are created with proper entropy
-even when the application is under heavy load,
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V6.3 Random Values.(6.3.2)]
+Verify that random GUIDs are created using the *GUID* v4 algorithm,
+and a cryptographically-secure pseudo-random number generator (*CSPRNG*).
+**GUID**s created using other pseudo-random number generators may be
+predictable.
+
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V6.3 Random Values.(6.3.3)]
+Verify that random numbers are created with proper entropy even when the
+application is under heavy load,
 or that the application degrades gracefully in such circumstances.
