--- a/content/pages/rules/cryptography/224/index.adoc
+++ b/content/pages/rules/cryptography/224/index.adoc
@@ -108,3 +108,10 @@ Verify that known insecure block modes (i.e. *ECB*, etc.), padding modes
 (i.e. **Triple-DES**, *Blowfish*, etc.), and weak hashing algorithms
 (i.e. *MD5*, *SHA1*, etc.) are not used unless required for backwards
 compatibility.
+
+. [[r17]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V6.3 Random Values.(6.3.1)]
+Verify that all random numbers, random file names, random **GUID**s, and random
+strings are generated using the cryptographic module's approved
+cryptographically secure random number generator when these random values are
+intended to be not guessable by an attacker.
