--- a/content/pages/rules/data/178/index.adoc
+++ b/content/pages/rules/data/178/index.adoc
@@ -1,6 +1,6 @@
 :slug: rules/178/
 :category: data
-:description: This document details the security guidelines and requirements related to the organization's sensitive data. The objective of this security requirement is to establish the importance of using digital signatures to guarantee the authenticity of the information.
+:description: This requirement establishes the importance of using digital signatures to guarantee the authenticity of the information.
 :keywords: Data, Digital Signatures, Authenticity, Information, ASVS, CWE
 :rules: yes
 
@@ -26,31 +26,42 @@ data and resources that are susceptible to being affected by third parties.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/345.html[CWE-345: Insufficient Verification of Data Authenticity]
+. [[r1]] link:https://cwe.mitre.org/data/definitions/326.html[CWE-326: Inadequate Encryption Strength]
+The software stores or transmits sensitive data using an encryption scheme that
+is theoretically sound,
+but is not strong enough for the level of protection required.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/345.html[CWE-345: Insufficient Verification of Data Authenticity]
 The software does not sufficiently verify the origin or authenticity of data,
 in a way that causes it to accept invalid data.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/347.html[CWE-347: Improper Verification of Cryptographic Signature]
+. [[r3]] link:https://cwe.mitre.org/data/definitions/347.html[CWE-347: Improper Verification of Cryptographic Signature]
 The software does not verify, or incorrectly verifies,
 the cryptographic signature for data.
 
-. [[r3]] link:https://cwe.mitre.org/data/definitions/494.html[CWE-494: Download of Code Without Integrity Check]
+. [[r4]] link:https://cwe.mitre.org/data/definitions/494.html[CWE-494: Download of Code Without Integrity Check]
 The product downloads source code or an executable from a remote location and
 executes the code without sufficiently verifying the origin and integrity of
 the code.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.14 Configuration Architectural Requirements.(1.14.2)]
 Verify that deploying binaries to untrusted devices makes use of binary
 signatures, trusted connections, and verified endpoints.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V3.5 Token-based Session Management.(3.5.3)]
 Verify that stateless session tokens use digital signatures, encryption, and
 other countermeasures to protect against tampering, enveloping, replay,
 null cipher, and key substitution attacks.
 
-. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V6.2 Algorithms.(6.2.7)]
+Verify that encrypted data is authenticated via signatures, authenticated
+cipher modes, or *HMAC* to ensure that ciphertext is not altered by an
+unauthorized party.
+
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.3 Deployed Application Integrity Controls.(10.3.1)]
 Verify that if the application has a client or server auto-update feature,
 updates should be obtained over secure channels and digitally signed.
